# backend/src/main/java/com/back/backend/domain/followup/model/QuestionType.java
@@ -1,0 +1,8 @@
+package com.back.backend.domain.followup.model;
+
+public enum QuestionType {
+    PROJECT,
+    PROBLEM,
+    TECH,
+    COLLABORATION
+}
